--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/Theme.PhoneStore"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".information.ActivityChangePassword"
+            android:label="Change Password"
+            android:exported="true" />
+        <activity
             android:name=".login.ActivityOTP"
             android:exported="true" />
         <activity
